--- a/config.yaml
+++ b/config.yaml
@@ -2,19 +2,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: emailservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: emailservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: emailservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/emailservice
           ports:
             - containerPort: 8080
           env:
@@ -24,11 +24,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: emailservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: emailservice
   ports:
     - protocol: TCP
       port: 5000
@@ -38,33 +38,35 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: recomendationservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: recomendationservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: recomendationservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/recomendationservice
           ports:
             - containerPort: 8080
           env:
             - name: PORT
               value: '8080'
+            - name: PRODUCT_CATALOG_SERVICE_ADDR
+              value: 'productcatalogservice:3550'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: recomendationservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: recomendationservice
   ports:
     - protocol: TCP
       port: 5000
@@ -74,325 +76,367 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: productcatalogservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: productcatalogservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: productcatalogservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/productcatalogservice
           ports:
-            - containerPort: 8080
+            - containerPort: 3550
           env:
             - name: PORT
-              value: '8080'
+              value: '3550'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: productcatalogservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: productcatalogservice
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 8080
+      port: 3550
+      targetPort: 3550
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: paymentservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: paymentservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: paymentservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/paymentservice
           ports:
-            - containerPort: 8080
+            - containerPort: 50051
           env:
             - name: PORT
-              value: '8080'
+              value: '50051'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: paymentservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: paymentservice
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 8080
+      port: 50051
+      targetPort: 50051
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: currencyservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: currencyservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: currencyservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/currencyservice
           ports:
-            - containerPort: 8080
+            - containerPort: 7000
           env:
             - name: PORT
-              value: '8080'
+              value: '7000'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: currencyservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: currencyservice
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 8080
+      port: 7000
+      targetPort: 7000
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: shippingservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: shippingservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: shippingservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/shippingservice
           ports:
-            - containerPort: 8080
+            - containerPort: 50051
           env:
             - name: PORT
-              value: '8080'
+              value: '50051'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: shippingservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: shippingservice
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 8080
+      port: 500051
+      targetPort: 50051
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: adservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: adservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: adservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/adservice
           ports:
-            - containerPort: 8080
+            - containerPort: 9555
           env:
             - name: PORT
-              value: '8080'
+              value: '9555'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: adservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: adservice
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 8080
+      port: 9555
+      targetPort: 9555
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: cartservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: cartservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: cartservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/cartservice
           ports:
-            - containerPort: 8080
+            - containerPort: 7070
           env:
             - name: PORT
-              value: '8080'
+              value: '7070'
+            - name: REDIS_ADDR
+              value: 'redis-cart:6379'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: cartservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: cartservice
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 8080
+      port: 7070
+      targetPort: 7070
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: redis-cart
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: redis-cart
   template:
     metadata:
       labels:
-        app: xxx
+        app: redis-cart
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: redis
+          image: redis:alpine
           ports:
-            - containerPort: 8080
-          env:
-            - name: PORT
-              value: '8080'
+            - containerPort: 6379
+          volumeMounts:
+            - name: redis-data
+              mountPath: /data
+          volumes:
+            - name: redis-data
+              emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: redis-cart
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: redis-cart
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 8080
+      port: 6379
+      targetPort: 6379
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: checkoutservice
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: checkoutservice
   template:
     metadata:
       labels:
-        app: xxx
+        app: checkoutservice
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/checkoutservice
           ports:
-            - containerPort: 8080
+            - containerPort: 5050
           env:
             - name: PORT
-              value: '8080'
+              value: '5050'
+            - name: PRODUCT_CATALOG_SERVICE_ADDR
+              value: 'productcatalogservice:3550'
+            - name: SHIPPING_SERVICE_ADDR
+              value: 'shippingservice:50051'
+            - name: PAYMENT_SERVICE_ADDR
+              value: 'paymentservice:50051'
+            - name: EMAIL_SERVICE_ADDR
+              value: 'emailservice:5000'
+            - name: CART_SERVICE_ADDR
+              value: 'cartservice:7070'
+            - name: CURRENCY_SERVICE_ADDR
+              value: 'currencyservice:7000'
+            - name: RECOMENDATION_SERVICE_ADDR
+              value: 'recomendationservice:5000'
+            - name: AD_SERVICE_ADDR
+              value: 'adservice:9555
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: checkoutservice
 spec:
   type: ClusterIP
   selector:
-    app: xxx
+    app: checkoutservice
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 8080
+      port: 5050
+      targetPort: 5050
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xxx
+  name: frontend
 spec:
   selector:
     matchLabels:
-      app: xxx
+      app: frontend
   template:
     metadata:
       labels:
-        app: xxx
+        app: frontend
     spec:
       containers:
-        - name: server
-          image: gcr.io/google-samples/microservices-demo/xxx
+        - name: service
+          image: gcr.io/google-samples/microservices-demo/frontend
           ports:
             - containerPort: 8080
           env:
             - name: PORT
               value: '8080'
+            - name: PRODUCT_CATALOG_SERVICE_ADDR
+              value: 'productcatalogservice:3550'
+            - name: SHIPPING_SERVICE_ADDR
+              value: 'shippingservice:50051'
+            - name: PAYMENT_SERVICE_ADDR
+              value: 'paymentservice:50051'
+            - name: EMAIL_SERVICE_ADDR
+              value: 'emailservice:5000'
+            - name: CART_SERVICE_ADDR
+              value: 'cartservice:7070'
+            - name: CURRENCY_SERVICE_ADDR
+              value: 'currencyservice:7000'
+            - name: RECOMENDATION_SERVICE_ADDR
+              value: 'recomendationservice:5000'
+            - name: AD_SERVICE_ADDR
+              value: 'adservice:9555'
+            - name: CHECKOUT_SERVICE_ADDR
+              value: 'checkoutservice:5050'
+            - name: REDIS_ADDR
+              value: 'redis-cart:6379' 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: xxx
+  name: frontend
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
-    app: xxx
+    app: frontend
   ports:
     - protocol: TCP
-      port: 5000
+      port: 80
       targetPort: 8080
-
+      nodePort: 30007
 ---
 
