--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,7 +13,7 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/emailservice
+          image: gcr.io/google-samples/microservices-demo/emailservice:v0.9.0
           ports:
             - containerPort: 8080
           env:
@@ -33,24 +32,23 @@ spec:
     - protocol: TCP
       port: 5000
       targetPort: 8080
-
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: recomendationservice
+  name: recommendationservice
 spec:
   selector:
     matchLabels:
-      app: recomendationservice
+      app: recommendationservice
   template:
     metadata:
       labels:
-        app: recomendationservice
+        app: recommendationservice
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/recomendationservice
+          image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.9.0
           ports:
             - containerPort: 8080
           env:
@@ -62,16 +60,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: recomendationservice
+  name: recommendationservice
 spec:
   type: ClusterIP
   selector:
-    app: recomendationservice
+    app: recommendationservice
   ports:
     - protocol: TCP
       port: 5000
       targetPort: 8080
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -88,7 +85,7 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/productcatalogservice
+          image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.9.0
           ports:
             - containerPort: 3550
           env:
@@ -107,7 +104,6 @@ spec:
     - protocol: TCP
       port: 3550
       targetPort: 3550
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -124,12 +120,14 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/paymentservice
+          image: gcr.io/google-samples/microservices-demo/paymentservice:v0.9.0
           ports:
             - containerPort: 50051
           env:
             - name: PORT
               value: '50051'
+            - name: DISABLE_PROFILER
+              value: '1'
 ---
 apiVersion: v1
 kind: Service
@@ -143,7 +141,6 @@ spec:
     - protocol: TCP
       port: 50051
       targetPort: 50051
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -160,12 +157,14 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/currencyservice
+          image: gcr.io/google-samples/microservices-demo/currencyservice:v0.9.0
           ports:
             - containerPort: 7000
           env:
             - name: PORT
               value: '7000'
+            - name: DISABLE_PROFILER
+              value: '1'
 ---
 apiVersion: v1
 kind: Service
@@ -179,7 +178,6 @@ spec:
     - protocol: TCP
       port: 7000
       targetPort: 7000
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -196,7 +194,7 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/shippingservice
+          image: gcr.io/google-samples/microservices-demo/shippingservice:v0.9.0
           ports:
             - containerPort: 50051
           env:
@@ -213,9 +211,8 @@ spec:
     app: shippingservice
   ports:
     - protocol: TCP
-      port: 500051
+      port: 50051
       targetPort: 50051
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -232,7 +229,7 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/adservice
+          image: gcr.io/google-samples/microservices-demo/adservice:v0.9.0
           ports:
             - containerPort: 9555
           env:
@@ -251,7 +248,6 @@ spec:
     - protocol: TCP
       port: 9555
       targetPort: 9555
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -268,7 +264,7 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/cartservice
+          image: gcr.io/google-samples/microservices-demo/cartservice:v0.9.0
           ports:
             - containerPort: 7070
           env:
@@ -289,7 +285,6 @@ spec:
     - protocol: TCP
       port: 7070
       targetPort: 7070
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -312,9 +307,9 @@ spec:
           volumeMounts:
             - name: redis-data
               mountPath: /data
-          volumes:
-            - name: redis-data
-              emptyDir: {}
+      volumes:
+        - name: redis-data
+          emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
@@ -328,7 +323,6 @@ spec:
     - protocol: TCP
       port: 6379
       targetPort: 6379
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -345,7 +339,7 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/checkoutservice
+          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.9.0
           ports:
             - containerPort: 5050
           env:
@@ -363,11 +357,10 @@ spec:
               value: 'cartservice:7070'
             - name: CURRENCY_SERVICE_ADDR
               value: 'currencyservice:7000'
-            - name: RECOMENDATION_SERVICE_ADDR
-              value: 'recomendationservice:5000'
+            - name: RECOMMENDATION_SERVICE_ADDR
+              value: 'recommendationservice:5000'
             - name: AD_SERVICE_ADDR
-              value: 'adservice:9555
-
+              value: 'adservice:9555'
 ---
 apiVersion: v1
 kind: Service
@@ -381,7 +374,6 @@ spec:
     - protocol: TCP
       port: 5050
       targetPort: 5050
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -398,7 +390,7 @@ spec:
     spec:
       containers:
         - name: service
-          image: gcr.io/google-samples/microservices-demo/frontend
+          image: gcr.io/google-samples/microservices-demo/frontend:v0.9.0
           ports:
             - containerPort: 8080
           env:
@@ -416,14 +408,14 @@ spec:
               value: 'cartservice:7070'
             - name: CURRENCY_SERVICE_ADDR
               value: 'currencyservice:7000'
-            - name: RECOMENDATION_SERVICE_ADDR
-              value: 'recomendationservice:5000'
+            - name: RECOMMENDATION_SERVICE_ADDR
+              value: 'recommendationservice:5000'
             - name: AD_SERVICE_ADDR
               value: 'adservice:9555'
             - name: CHECKOUT_SERVICE_ADDR
               value: 'checkoutservice:5050'
             - name: REDIS_ADDR
-              value: 'redis-cart:6379' 
+              value: 'redis-cart:6379'
 ---
 apiVersion: v1
 kind: Service
@@ -438,5 +430,3 @@ spec:
       port: 80
       targetPort: 8080
       nodePort: 30007
----
-
